--- a/home/style.css
+++ b/home/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300&display=swap');
 
 :root {
-
     --rich-black-fogra-29: hsl(225, 25%, 9%);
     --rich-black-fogra-39: hsl(170, 21%, 5%);
     --raisin-black: hsl(228, 13%, 15%);
@@ -337,7 +336,7 @@ html{
 
 
 .halaman-home .popular-title .sinopsis{
-    width: 500px;
+    width: 400px;
     color: #d3d3d3;
     margin: 30px 0;
     font-weight: 900;
@@ -347,6 +346,7 @@ html{
     opacity: 0.8;
     transition: 0.5s;
     margin-bottom: -10vh;
+    margin-right: 100vh;
 }
 
 .halaman-home .popular-title .popular-title-box .popular-title-img img{
