--- a/edit-profile/style.css
+++ b/edit-profile/style.css
@@ -260,7 +260,7 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 75vh;
+    margin-left: 80vh;
     margin-top: 5vh;
 }
 
@@ -268,4 +268,34 @@ html{
     width: 100%; 
     height: 100%;
     object-fit: cover;
+}
+
+.halaman-info .container .user-name{
+    margin-top: 3vh;
+    margin-left: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.halaman-info .container .user-name .nama-user{
+    font-size: 4vh;
+    text-align: center;
+}
+
+.halaman-info .container .user-status{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.halaman-info .container .user-status input{
+    height: 50px;
+    width: 30%;
+    background-color: rgba(226, 222, 222, 0.577);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
 }
